objects/ResolutionLink__c.object
<CustomObject>
    <description>DocLink in Siebel. Tech Support to use to store links that are used and referenced for case resolution.</description>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>ResolutionLinks</relationshipLabel>
        <relationshipName>ResolutionLinks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Web_Command__c</fullName>
        <label>Web Command</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ResolutionLink</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Case__c</columns>
        <columns>URL__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RL-{0000}</displayFormat>
        <label>ResolutionLink #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ResolutionLinks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>